unpackaged/main/default/objects/FS_Order_Tracking__c/FS_Order_Tracking__c.object-meta.xml
<CustomObject>
    <description>Custom field to track shipment information tied to the Sales Order</description>
    <label>Order Tracking</label>
    <nameField>
        <displayFormat>OT {000000}</displayFormat>
        <label>Order Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>