unpackaged/main/default/objects/FS_Order_Tracking__c/fields/FS_Number_of_boxes_Shipped__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_of_boxes_Shipped__c</fullName>
    <inlineHelpText>Quantity of boxes shipped</inlineHelpText>
    <label>Number of boxes Shipped</label>
    <length>10</length>
    <type>Text</type>
</CustomField>