unpackaged/main/default/objects/FS_Order_Tracking__c/fields/FS_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FS_Quantity__c</fullName>
    <inlineHelpText>Quantity of items in sales order line shipped</inlineHelpText>
    <label>Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>