unpackaged/main/default/objects/FS_Order_Tracking__c/fields/FS_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sales Order tied to the shippable items</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Orders Tracking</relationshipLabel>
    <relationshipName>FS_Orders_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>