unpackaged/main/default/objects/FS_Order_Tracking__c/fields/FS_Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.FS_Sales_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Orders Tracking</relationshipLabel>
    <relationshipName>Orders_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>