unpackaged/main/default/objects/FS_Order_Tracking__c/fields/FS_Total_Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Quantity_Shipped__c</fullName>
    <inlineHelpText>total quantity shipped for the item. The user will be charged when this count is equal to the quantity on the sales order line record for the item</inlineHelpText>
    <label>Total Quantity Shipped</label>
    <summarizedField>FS_Order_Fulfillment__c.FS_Quantity_Shipped__c</summarizedField>
    <summaryForeignKey>FS_Order_Fulfillment__c.FS_Order_Tracking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>